refactor: separate AI into service module, change response to json
